[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
dirs = "4.0.0"
reqwest = { version = "0.11.14", features = ["blocking"]}
ron = "0.8.0"
serde = { version = "1.0.152", features = ["derive"] }
set_env = "1.3.4"
tar = "0.4.38"